--- a/front/public/index.html
+++ b/front/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Sistema de Gestão Hospitalar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
